--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@prisma/client": "^6.5.0",
     "@react-oauth/google": "^0.12.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "next": "15.2.2",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "openai": "^4.87.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
