--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "strictNullChecks": true,
+    "noImplicitAny": false,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
